--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>cn.zephyr</groupId>
     <artifactId>microservice4docker</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>message-thrift-service-api</module>
+    </modules>
 
 
 </project>
