add function: complete user register service

--- a/user-edge-service/src/main/resources/application.properties
+++ b/user-edge-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-service-name=hah
-service-port=8082
+service.name=hah
+service.port=8082
 
 spring.redis.host=192.168.163.128
 spring.redis.password=111111
@@ -7,4 +7,7 @@ spring.redis.port=6379
 spring.redis.timeout=30000
 
 thrift.user.ip=127.0.0.1
-thrift.user.port=7911
+thrift.user.port=8081
+
+thrift.message.ip=127.0.0.1
+thrift.message.port=9090
