--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>user-edge-service</module>
         <module>user-edge-service-client</module>
         <module>message-thirft-java-service</module>
+        <module>course-dubbo-service-api</module>
+        <module>course-dubbo-service</module>
     </modules>
 
 
