--- a/course-dubbo-service/src/main/resources/application.properties
+++ b/course-dubbo-service/src/main/resources/application.properties
@@ -1,13 +1,14 @@
+server.port=9090
 #dubbo 配置
-spring.dubbo.application.name=course-service
+spring.dubbo.application.name=course-dubbo-service
 spring.dubbo.registry.address=zookeeper://192.168.163.128:2181
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
 #spring.dubbo.protocol.host=127.0.0.1
-spring.dubbo.scan=cn.zephyr.course
+spring.dubbo.scan=cn.zephyr
 
 #数据源的配置
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ms4docker_course
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ms4docker_course?characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
