--- a/user-edge-service/src/main/resources/application.properties
+++ b/user-edge-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-service.name=hah
-service.port=8082
+server.name=hah
+server.port=8082
 
 spring.redis.host=192.168.163.128
 spring.redis.password=111111
