--- a/user-edge-service/src/main/resources/application-mac.properties
+++ b/user-edge-service/src/main/resources/application-mac.properties
@@ -2,7 +2,7 @@ server.name=hah
 server.port=8082
 
 spring.redis.host=192.168.2.128
-#spring.redis.password=111111
+spring.redis.password
 spring.redis.port=6379
 spring.redis.timeout=30000
 
