add patch:fix details

--- a/course-dubbo-service/src/main/resources/application-mac.properties
+++ b/course-dubbo-service/src/main/resources/application-mac.properties
@@ -13,5 +13,5 @@ spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-thrift.user.ip=user-service
+thrift.user.ip=127.0.0.1
 thrift.user.port=8081
