--- a/course-dubbo-service/src/main/resources/application.properties
+++ b/course-dubbo-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
-#dubbo ÅäÖÃ
+#dubbo ï¿½ï¿½ï¿½ï¿½
 spring.dubbo.application.name=course-dubbo-service
 spring.dubbo.registry.address=zookeeper://192.168.163.128:2181
 spring.dubbo.protocol.name=dubbo
@@ -7,11 +7,11 @@ spring.dubbo.protocol.port=20880
 #spring.dubbo.protocol.host=127.0.0.1
 spring.dubbo.scan=cn.zephyr
 
-#Êý¾ÝÔ´µÄÅäÖÃ
+#ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ms4docker_course?characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-thrift.user.ip=user-service
+thrift.user.ip=127.0.0.1
 thrift.user.port=8081
