--- a/message-thirft-java-service/pom.xml
+++ b/message-thirft-java-service/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>user-thrift-service-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.zephyr</groupId>
+            <artifactId>message-thrift-service-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.springframework</groupId>-->
 <!--            <artifactId>spring-context-support</artifactId>-->
