add files: docker化

--- a/course-edge-service/src/main/resources/application.properties
+++ b/course-edge-service/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8091
 
 #dubbo config
 spring.dubbo.application.name=course-edge-service
-spring.dubbo.registry.address=zookeeper://${dubbo.server}:2181
+spring.dubbo.registry.address=zookeeper://${dubbo.address}:2181
 spring.dubbo.scan=cn.zephyr
