--- a/user-edge-service/src/main/resources/application.properties
+++ b/user-edge-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.name=user-edge-service
 server.port=8082
 
 
-spring.redis.host=192.168.163.128
+spring.redis.host=${redis.host}
 spring.redis.password=111111
 spring.redis.port=6379
 spring.redis.timeout=30000
