基于docker-compose的服务编排

--- a/course-dubbo-service/src/main/resources/application.properties
+++ b/course-dubbo-service/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-thrift.user.ip=127.0.0.1
+thrift.user.ip=user-thrift-service
 thrift.user.port=8081
