--- a/api-gateway-zuul/src/main/resources/application.properties
+++ b/api-gateway-zuul/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 zuul.routes.course.path=/course/**
-zuul.routes.course.url=http://127.0.0.1:8091/course/
+zuul.routes.course.url=http://course-edge-service:8091/course/
 
 zuul.routes.user.path=/user/**
-zuul.routes.user.url=http://127.0.0.1:8082/user/
+zuul.routes.user.url=http://user-edge-service:8082/user/
 
