--- a/user-edge-service/src/main/resources/application.properties
+++ b/user-edge-service/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.redis.password=111111
 spring.redis.port=6379
 spring.redis.timeout=30000
 
-thrift.user.ip=127.0.0.1
+thrift.user.ip=user-thrift-service
 thrift.user.port=8081
 
-thrift.message.ip=127.0.0.1
+thrift.message.ip=message-thrift-service
 thrift.message.port=9090
