--- a/user-edge-service-client/pom.xml
+++ b/user-edge-service-client/pom.xml
@@ -6,6 +6,8 @@
     <modelVersion>4.0.0</modelVersion>
     <description>单点登录对外jar</description>
     <artifactId>user-edge-service-client</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <groupId>cn.zephyr</groupId>
 
     <dependencies>
         <dependency>
