--- a/course-edge-service/src/main/resources/application-mac.properties
+++ b/course-edge-service/src/main/resources/application-mac.properties
@@ -3,5 +3,6 @@ server.name=course-edge-service
 
 #dubbo config
 spring.dubbo.application.name=course-edge-service
-spring.dubbo.registry.address=zookeeper://192.168.2.128:2181
+spring.dubbo.registry.address=zookeeper://${dubbo.address}:2181
 spring.dubbo.scan=cn.zephyr
+spring.dubbo.timeout=30000
