--- a/course-edge-service/src/main/resources/application.properties
+++ b/course-edge-service/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8091
 spring.dubbo.application.name=course-edge-service
 spring.dubbo.registry.address=zookeeper://${dubbo.address}:2181
 spring.dubbo.scan=cn.zephyr
+spring.dubbo.timeout=300000
