--- a/user-edge-service/src/main/resources/application-mac.properties
+++ b/user-edge-service/src/main/resources/application-mac.properties
@@ -1,13 +1,13 @@
 server.name=user-edge-service
 server.port=8082
 
-spring.redis.host=192.168.2.128
-spring.redis.password
+spring.redis.host=${redis.host}
+spring.redis.password=
 spring.redis.port=6379
 spring.redis.timeout=30000
 
-thrift.user.ip=127.0.0.1
+thrift.user.ip=user-thrift-service
 thrift.user.port=8081
 
-thrift.message.ip=127.0.0.1
+thrift.message.ip=message-thrift-service
 thrift.message.port=9090
