--- a/user-thrift-service/src/main/resources/application.properties
+++ b/user-thrift-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ service.name=user-thrift-service
 service.port=8081
 
 # datasource configuration
-spring.datasource.url=jdbc:mysql://${mysql.server}/ms4docker?characterEncoding=utf8&useSSL=true
+spring.datasource.url=jdbc:mysql://${mysql.server}:3306 /ms4docker?characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
